--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@rsuite/icons": "^1.0.3",
+    "echarts": "^5.5.1",
+    "echarts-for-react": "^3.0.2",
     "next": "14.2.7",
     "react": "^18",
     "react-dom": "^18",
