--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.2.7",
     "@rsuite/icons": "^1.0.3",
     "echarts": "^5.5.1",
     "echarts-for-react": "^3.0.2",
@@ -16,6 +17,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.3.0",
+    "react-redux": "^9.1.2",
     "rsuite": "^5.70.0",
     "sass": "^1.77.8"
   },
