--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@reduxjs/toolkit": "^2.2.7",
     "@rsuite/icons": "^1.0.3",
+    "axios": "^1.7.7",
     "echarts": "^5.5.1",
     "echarts-for-react": "^3.0.2",
     "next": "14.2.7",
