--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-dom": "^18",
     "react-icons": "^5.3.0",
     "react-redux": "^9.1.2",
+    "react-slick": "^0.30.2",
     "rsuite": "^5.70.0",
     "sass": "^1.77.8"
   },
