--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "react-redux": "^9.1.2",
     "react-slick": "^0.30.2",
     "rsuite": "^5.70.0",
-    "sass": "^1.77.8"
+    "sass": "^1.77.8",
+    "swiper": "^11.1.14"
   },
   "devDependencies": {
     "@types/node": "^20",
