--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "axios": "^1.7.7",
     "echarts": "^5.5.1",
     "echarts-for-react": "^3.0.2",
+    "hex-to-hsl": "^1.0.2",
     "next": "14.2.7",
     "react": "^18",
     "react-dom": "^18",
